--- a/home.html
+++ b/home.html
@@ -6,9 +6,9 @@
 <title> Home </title>
 <style>
 .grn-header{
-width:100%
-height:15%
-background-color:#00ff00
+width:100%;
+height:15%;
+background-color:#00ff00;
 }
 </style>
 </head>
