--- a/home.html
+++ b/home.html
@@ -10,12 +10,31 @@ width:100%;
 height:15%;
 background-color:green;
 }
+.image{
+height:40%;
+width:100%;
+background-image:url(https://www.google.com.pk/url?sa=i&url=https%3A%2F%2Fwww.pseb.org.pk%2Fwhy-pakistan2&psig=AOvVaw112s5KdDAN-h7cJXN-aUxC&ust=1594376102296000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCIjxsP33v-oCFQAAAAAdAAAAABAD);
+ }
 </style>
 </head>
 <body>
 <header>
 <div class = "grn-header">
+  <h1>Awaaz-e-Pakistan</h1>
 </div>
+<div class="collapse navbar-collapse" id="navbar">
+  <ul class="navbar-nav mr-auto mt-2">
+     <li class="nav-item"><a class="nav-link" href="/home.html">Home</a></li>
+     <li class="nav-item"><a class="nav-link" href="/ehsas.html">Proj:Ehsaas</a></li>
+     <li class="nav-item"><a class="nav-link" href="/hamdard.html">proj:Hamdard</a></li>
+     <li class="nav-item"><a class="nav-link" href="/qudrat.html">Proj:Qudrat</a></li>
+     <li class="nav-item"><a class="nav-link" href="/Contact.html">Contact Us</a></li>
+   </ul>
 </header>
+<main>
+  <div class = "image">
+    <pre style="padding:50px> Aiming Towards a Better Future </pre>
+  </div>
+</main>
 </body>
 </html> 
