--- a/home.html
+++ b/home.html
@@ -35,5 +35,19 @@
     is our base and this is what we stand for. It is time that someone took a leap and we not only as a community, but as a family will change the way our generation thinks
     and behaves.</div>
   </div>
+  <div class="Section">
+    <div class="heading"> Aims</div>
+    <div class="detail"> Awaaz-e-Pakistan aims to improve the society that live in and to make Pakistan into a better version of
+      itself. In order to accomplish this aim we will be launching three projects which will focus on:
+      <ol>
+        <li><a href="ehsaas.html"> Project Ehsaas</a>: Stopping the atrocities which occur in our society on a daily basis</li>
+        <li><a href="hamdard.html"> Project Hamdard</a>: Helping the poor and needy in any way we can</li>
+        <li><a href="qudrat.html"> Project Qudrat</a>: Restoring the beauty of Pakistan</li>
+      </ol>
+    </div>
+  </div>
+  <div class="Section">
+    <div class="heading"> Projects</div>
+  </div>  
 </body>
 </html>
