--- a/home.html
+++ b/home.html
@@ -40,9 +40,9 @@
     <div class="detail"> Awaaz-e-Pakistan aims to improve the society that live in and to make Pakistan into a better version of
       itself. In order to accomplish this aim we will be launching three projects which will focus on:
       <ol>
-        <li><a href="ehsaas.html"> Project Ehsaas</a>: Stopping the atrocities which occur in our society on a daily basis</li>
-        <li><a href="hamdard.html"> Project Hamdard</a>: Helping the poor and needy in any way we can</li>
-        <li><a href="qudrat.html"> Project Qudrat</a>: Restoring the beauty of Pakistan</li>
+        <li><a href="ehsaas.html"> Project Ehsaas</a>: Stopping the atrocities which occur in our society on a daily basis.</li>
+        <li><a href="hamdard.html"> Project Hamdard</a>: Helping the poor and needy in any way we can.</li>
+        <li><a href="qudrat.html"> Project Qudrat</a>: Restoring the beauty of Pakistan.</li>
       </ol>
     </div>
   </div>
