--- a/home.html
+++ b/home.html
@@ -2,7 +2,8 @@
 <html lang = "en">
 <head>
   <title> Home</title>
-  <meta name = "viewport" content = "width=device-width,initial-scale = 1.0">
+  <meta charset="utf-8">
+  <meta name = "viewport" content = "width=device-width, initial-scale = 1.0, shrink-to-fit=no">
   <link rel = "stylesheet" href = "static/home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
@@ -24,7 +25,7 @@
     </a>
   </div>
   <div class = "container">
-    <img class = "mainpic" src="pictures/main.jpg" alt="Pakistan">
+    <img class = "mainpic-home" src="pictures/awaaz cover.png" alt="Pakistan">
     <div class = "bottom-left">For A Greater Good</div>
   </div>
   <div class="Section">
@@ -50,6 +51,10 @@
   </div>
   <div class="Section2">
     <div class="heading1"> Projects</div>
+    <div class = "container-projects">
+        <a href = "ehsaas.html"><img class="project-img" alt = "Ehsaas" src="pictures/Ehsaas.png"></a>
+        <a href = "hamdard.html"><img class="project-img" alt = "Ehsaas" src="pictures/hamdard.png"></a>
+    </div>
   </div>
 </body>
 </html>
