--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
     <div class="heading"> About Us </div>
     <div class="detail">A lot of us don't know, but there are a lot of monstrous things that happen in our society. We, as an
       organization wish to remove the blindfold that our society wears without knowing it. Our mission is to speak for the
-      speechless and to act as a crutch for those who are treated as a burden on society. Look at the ways of our country,see the
+      speechless and to act as a crutch for those who are treated as a burden on society. Look at the ways of our country, see the
       truth for yourself. If no one will stand for justice then we surely will. We will do everything in our power to help those
       who are in need of help. This is our base and this is what we stand for. It is time that someone took a leap and we not
       only as a community, but as a family will change the way our generation thinks and behaves.</div>
@@ -52,8 +52,8 @@
   <div class="Section2">
     <div class="heading1"> Projects</div>
     <div class = "container-projects">
-        <a href = "ehsaas.html"><img class="project-img" alt = "Ehsaas" src="pictures/Ehsaas.png"></a>
-        <a href = "hamdard.html"><img class="project-img" alt = "Ehsaas" src="pictures/hamdard.png"></a>
+        <img class="project-img" alt = "Ehsaas" src="pictures/Ehsaas.png">
+        <img class="project-img" alt = "Ehsaas" src="pictures/hamdard.png">
     </div>
   </div>
 </body>
