--- a/home.html
+++ b/home.html
@@ -52,8 +52,8 @@
   <div class="Section2">
     <div class="heading1"> Projects</div>
     <div class = "container-projects">
-        <img class="project-img" alt = "Ehsaas" src="pictures/Ehsaas.png">
-        <img class="project-img" alt = "Ehsaas" src="pictures/hamdard.png">
+        <a href = "ehsaas.html"><img class="project-img" alt = "Ehsaas" src="pictures/Ehsaas.png"></a>
+        <a href = "hamdard.html"><img class="project-img" alt = "Ehsaas" src="pictures/hamdard.png"></a>
     </div>
   </div>
 </body>
