--- a/home.html
+++ b/home.html
@@ -24,6 +24,10 @@
       <i class="fa fa-bars"></i>
     </a>
   </div>
+  <div class="nav">
+    <a href="javascript:void(0);" id = "JoinUs"> Join Us</a>
+    <a href="javascript:void(0);" id = "Donate"> Donate</a>
+  </div>
   <div class = "container">
     <img class = "mainpic-home" src="pictures/awaaz cover.png" alt="Pakistan">
     <div class = "bottom-left">For A Greater Good</div>
