--- a/home.html
+++ b/home.html
@@ -56,8 +56,16 @@
   <div class="Section2">
     <div class="heading1"> Projects</div>
     <div class = "container-projects">
-        <a href = "ehsaas.html"><img class="project-img" alt = "Ehsaas" src="pictures/Ehsaas.png"></a>
-        <a href = "hamdard.html"><img class="project-img" alt = "Ehsaas" src="pictures/hamdard.png"></a>
+        <a href = "ehsaas.html"><img class="project-img" alt = "Proj:Ehsaas" src="pictures/Ehsaas.png"></a>
+        <a href = "hamdard.html"><img class="project-img" alt = "Proj:Hamdard" src="pictures/hamdard.png"></a>
+        <a href = "qudrat.html"><img class="project-img" alt = "Proj:Qudrat" src="pictures/qudrat.png"></a>
+    </div>
+  </div>
+  <div class="Section3">
+    <div class="heading1"> Team </div>
+      <button type="button" class="executive"> Executive </button>
+      <button type="button" class="directorate"> Directorate </button>
+      <button type="button" class="ass-directorate"> Assistant Directorate </button>
     </div>
   </div>
 </body>
