--- a/home.html
+++ b/home.html
@@ -64,8 +64,119 @@
   <div class="Section3">
     <div class="heading1"> Team </div>
       <button type="button" class="executive"> Executive </button>
+      <div class="team">
+        <div class="exec-card">
+          <img src="pictures/Muaz.png" alt="Founder" class="card-img">
+          <div class="card-container">
+            <h4><b>Founder</b></h4>
+            <p>Ahmad Muaz</p>
+          </div>
+        </div>
+        <div class="exec-card">
+          <img src="pictures/Abdur.jpg" alt="Co-Founder" class="card-img">
+          <div class="card-container">
+            <h4><b>Co-Founder</b></h4>
+            <p>Muhammad Abdur Rahman Saad</p>
+          </div>
+        </div>
+        <div class="exec-card">
+          <img src="pictures/Hamza.jpg" alt="Executive Director" class="card-img">
+          <div class="card-container">
+            <h4><b>Executive Director</b></h4>
+            <p>Hafiz Hamza Mubashir</p>
+          </div>
+        </div>
+        <div class="exec-card">
+          <img src="pictures/Eman.jpg" alt="Assistant Executive Director" class="card-img">
+          <div class="card-container">
+            <h4><b>Assistant Executive Director</b></h4>
+            <p>Eman Amir</p>
+          </div>
+        </div>
+        <div class="exec-card">
+          <img src="pictures/Warda.jpg" alt="Project Coordinator" class="card-img">
+          <div class="card-container">
+            <h4><b>Project Coordinator</b></h4>
+            <p>Wardah Asad</p>
+          </div>
+        </div>
+      </div>
       <button type="button" class="directorate"> Directorate </button>
-      <button type="button" class="ass-directorate"> Assistant Directorate </button>
+      <div class="team">
+        <div class="direc-card">
+          <img src="pictures/Haroon.jpg" alt="Director Publications" class="card-img">
+          <div class="card-container">
+            <h4><b>Director Publications</b></h4>
+            <p>Haroon Fidayat</p>
+          </div>
+        </div>
+        <div class="direc-card">
+          <img src="pictures/Maaheen.jpeg" alt="Director Promotions" class="card-img">
+          <div class="card-container">
+            <h4><b>Director Promotions</b></h4>
+            <p>Maaheen Majid</p>
+          </div>
+        </div>
+        <div class="direc-card">
+          <img src="pictures/Zainab.jpg" alt="Assistant Director Promotions" class="card-img">
+          <div class="card-container">
+            <h4><b>Assistant Director Promotions</b></h4>
+            <p>Zainab Rizwan</p>
+          </div>
+        </div>
+        <div class="direc-card">
+          <img src="pictures/Marriam.jpg" alt="Director HR" class="card-img">
+          <div class="card-container">
+            <h4><b>Director HR</b></h4>
+            <p>Syeda Marriam Shahzad</p>
+          </div>
+        </div>
+        <div class="direc-card">
+          <img src="pictures/Furqan.jpg" alt="Treasurer" class="card-img">
+          <div class="card-container">
+            <h4><b>Treasurer</b></h4>
+            <p>Furqan Tariq</p>
+          </div>
+        </div>
+        <div class="direc-card">
+          <img src="pictures/Zainab T.jpg" alt="organization Artist" class="card-img">
+          <div class="card-container">
+            <h4><b>Organization Artist</b></h4>
+            <p>Zainab Tahir</p>
+          </div>
+        </div>
+      </div>
+      <button type="button" class="Project Heads"> Project Heads </button>
+      <div class="team">
+        <div class="head-card">
+          <img src="pictures/Zara.jpeg" alt="Project Ehsaas Head" class="card-img">
+          <div class="card-container">
+            <h4><b>Project Ehsaas Head</b></h4>
+            <p>Zara Irfan</p>
+          </div>
+        </div>
+        <div class="head-card">
+          <img src="pictures/Masooma.jpeg" alt="Project Ehsaas Head" class="card-img">
+          <div class="card-container">
+            <h4><b>Project Ehsaas Head</b></h4>
+            <p>Masooma Zenab</p>
+          </div>
+        </div>
+        <div class="head-card">
+          <img src="pictures/Azeem.jpeg" alt="Project Qudrat Head" class="card-img">
+          <div class="card-container">
+            <h4><b>Project Qudrat Head</b></h4>
+            <p>Azeem Khan</p>
+          </div>
+        </div>
+        <div class="head-card">
+          <img src="pictures/Alina.jpg" alt="Project Qudrat Head" class="card-img">
+          <div class="card-container">
+            <h4><b>Project Qudrat Head</b></h4>
+            <p>Alina Imran</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </body>
