--- a/home.html
+++ b/home.html
@@ -63,8 +63,8 @@
   </div>
   <div class="Section3">
     <div class="heading1"> Team </div>
-      <button type="button" class="executive"> Executive </button>
-      <div class="team">
+      <button type="button" class="executive" onclick="Exec_team()"> Executive </button>
+      <div class="exec-team">
         <div class="exec-card">
           <img src="pictures/Muaz.png" alt="Founder" class="card-img">
           <div class="card-container">
@@ -101,8 +101,8 @@
           </div>
         </div>
       </div>
-      <button type="button" class="directorate"> Directorate </button>
-      <div class="team">
+      <button type="button" class="directorate" onclick="Direc_team()"> Directorate </button>
+      <div class="direc-team">
         <div class="direc-card">
           <img src="pictures/Haroon.jpg" alt="Director Publications" class="card-img">
           <div class="card-container">
@@ -146,8 +146,8 @@
           </div>
         </div>
       </div>
-      <button type="button" class="Project Heads"> Project Heads </button>
-      <div class="team">
+      <button type="button" class="Project Heads" onclick="Head_team()"> Project Heads </button>
+      <div class="head-team">
         <div class="head-card">
           <img src="pictures/Zara.jpeg" alt="Project Ehsaas Head" class="card-img">
           <div class="card-container">
