--- a/home.html
+++ b/home.html
@@ -17,9 +17,9 @@
   <div class="topnav" id="myTopnav">
     <a href="home.html" class="active">Home</a>
     <a href="ehsaas.html">Project:Ehsaas</a>
-    <a href="hamdard.htm;">Project:Hamdard</a>
+    <a href="hamdard.html">Project:Hamdard</a>
     <a href="qudrat.html">Project:Qudrat</a>
-    <a href="#contact.html">Contact Us</a>
+    <a href="javascript:void(0);">Contact Us</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
@@ -63,7 +63,7 @@
   </div>
   <div class="Section3">
     <div class="heading1"> Team </div>
-      <button type="button" class="executive" onclick="Exec_team()"> Executive </button>
+      <button type="button" class="executive" onclick="Exec_team()" id = "Team"> Executive </button>
       <div class="exec-team">
         <div class="exec-card">
           <img src="pictures/Muaz.png" alt="Founder" class="card-img">
