--- a/ehsaas.html
+++ b/ehsaas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-  <title> Home</title>
+  <title> Proj:Ehsaas</title>
   <meta charset="utf-8">
   <meta name = "viewport" content = "width=device-width, initial-scale = 1.0, shrink-to-fit=no">
   <link rel = "stylesheet" href = "static/home.css">
@@ -17,7 +17,7 @@
   <div class="topnav" id="myTopnav">
     <a href="home.html" class="active">Home</a>
     <a href="ehsaas.html">Project:Ehsaas</a>
-    <a href="hamdard.htm;">Project:Hamdard</a>
+    <a href="hamdard.html">Project:Hamdard</a>
     <a href="qudrat.html">Project:Qudrat</a>
     <a href="#Team">Team</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -27,6 +27,19 @@
   <div class="nav">
     <a href="javascript:void(0);" id = "JoinUs"> Join Us</a>
     <a href="javascript:void(0);" id = "Donate"> Donate</a>
+  </div>
+  <div class="proj-details">
+    <div class="heading2"> Project Ehsaas</div>
+    <img src="pictures/Ehsaas1.png" alt="project logo" width="100%">
+    <p> Crime runs rampant everywhere around us, and  more often than not the legal system fails its people. Justice is for those
+      gender and class favors; the rest msut find their salvation in silence. In times like these, the call out culture on social
+      media becomes all the more imperative, as it is a place relatively free of discrimination.</p>
+    <p>Project Ehsaas is geared towards empathy. It works to provide a safe space for victims of harassment, be it sexual or cyber,
+      to have a safe space for their experiences. At times where lockdowns are resulting in a sharp spike in cases of domestic
+      violence, sexual assault, and online bullying, it is imperative that no plea go unheard. This subset of Awaaz e Pakistan
+      directs these individuals towards the comfort to narrate their stories in a manner devoid of scrutiny or judgement, and
+      connect them with professional help so they may get more constructive help. While we will always be there to support, listen
+      and provide any necessary help, we are NOT an alternative to therapy.</p>
   </div>
 </body>
 </html>
