--- a/hamdard.html
+++ b/hamdard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-  <title> Home</title>
+  <title> proj:Hamdard</title>
   <meta charset="utf-8">
   <meta name = "viewport" content = "width=device-width, initial-scale = 1.0, shrink-to-fit=no">
   <link rel = "stylesheet" href = "static/home.css">
@@ -17,7 +17,7 @@
   <div class="topnav" id="myTopnav">
     <a href="home.html" class="active">Home</a>
     <a href="ehsaas.html">Project:Ehsaas</a>
-    <a href="hamdard.htm;">Project:Hamdard</a>
+    <a href="hamdard.html">Project:Hamdard</a>
     <a href="qudrat.html">Project:Qudrat</a>
     <a href="#Team">Team</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -27,6 +27,22 @@
   <div class="nav">
     <a href="javascript:void(0);" id = "JoinUs"> Join Us</a>
     <a href="javascript:void(0);" id = "Donate"> Donate</a>
+  </div>
+  <div class="proj-details">
+    <div class="heading2"> Project Hamdard</div>
+    <img src="pictures/hamdard1.png" alt="project logo" width="100%">
+    <p> Pakistan has one of the lowest HDI's in Asia, with almost 15% of the population still living under the absolute
+    poverty line. Wealth is disproportionately distributed among the top 10%, which ultimately means that the bottom 30% can
+    only earn about 4.1% of the income. The upper and middle classes then have the responsibility to help these people in
+    whatever way they can.</p>
+    <p>This is where Project Hamdard comes in. Project Hamdard is exactly as the name might suggest, it aims at philanthropy
+    for the underprivileged. Globally, absolute poverty is at a sharp decline. But, in a capitalist structure, relative poverty
+    continues to prey on a significant majority of the world population. Recognizing our privilege is the first step in
+    ameliorating these statistics to the best of our capabilities. Project Hamdard plans to organize food, books, and clothes
+    drives where the financially deterred can have access to these facilities. Given the current pandemic, it will also work
+    towards the distribution of Personal Protective Equipment. In the future, as it gains more momentum, we will work at placing
+    donation boxes at various institutes across the country to help garner funds for the project. In cases of emergencies, our
+    contact number will be readily provided.</p>
   </div>
 </body>
 </html>
