--- a/home.html
+++ b/home.html
@@ -104,6 +104,13 @@
       <button type="button" class="directorate" onclick="Direc_team()"> Directorate </button>
       <div class="direc-team">
         <div class="direc-card">
+          <img src="pictures/zain.jpeg" alt="Director Media" class="card-img">
+          <div class="card-container">
+            <h4><b>Director Media</b></h4>
+            <p>Zain Waheed</p>
+          </div>
+        </div>
+        <div class="direc-card">
           <img src="pictures/Haroon.jpg" alt="Director Publications" class="card-img">
           <div class="card-container">
             <h4><b>Director Publications</b></h4>
@@ -136,6 +143,13 @@
           <div class="card-container">
             <h4><b>Treasurer</b></h4>
             <p>Furqan Tariq</p>
+          </div>
+        </div>
+        <div class="direc-card">
+          <img src="pictures/narmeen.jpg" alt="official spokesperson" class="card-img">
+          <div class="card-container">
+            <h4><b>Official Spokesperson</b></h4>
+            <p>Narmeen Nawaz</p>
           </div>
         </div>
         <div class="direc-card">
