--- a/qudrat.html
+++ b/qudrat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-  <title> Home</title>
+  <title> Proj:Qudrat</title>
   <meta charset="utf-8">
   <meta name = "viewport" content = "width=device-width, initial-scale = 1.0, shrink-to-fit=no">
   <link rel = "stylesheet" href = "static/home.css">
@@ -17,7 +17,7 @@
   <div class="topnav" id="myTopnav">
     <a href="home.html" class="active">Home</a>
     <a href="ehsaas.html">Project:Ehsaas</a>
-    <a href="hamdard.htm;">Project:Hamdard</a>
+    <a href="hamdard.html">Project:Hamdard</a>
     <a href="qudrat.html">Project:Qudrat</a>
     <a href="#Team">Team</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -27,6 +27,18 @@
   <div class="nav">
     <a href="javascript:void(0);" id = "JoinUs"> Join Us</a>
     <a href="javascript:void(0);" id = "Donate"> Donate</a>
+  </div>
+  <div class="proj-details">
+    <div class="heading2"> Project Qudrat</div>
+    <img src="pictures/qudrat1.png" alt="project logo" width="100%">
+    <p> Every time I look outside all I see is an inevitable destruction slowing coming our way. Earth is no longer a garden
+    of Eden.in fact, it is fast racing towards deterioration and death. With atmospheric CO<sub>2</sub> levels at a dangerous
+    high,flooding sea waters, and massive carbon footprints corroding our land, it is essential that major and immediate actions
+    come into existence.</p>
+    <p> While profit-oriented corporations are the ones to actually be heald accountable, it is individuals that hand them the
+    profit, and thereofore, the power to continue preying on the planet. Every change starts with an individual. Speak up for
+    this nation, we are the ones who have to be the gardeners of our foreseeing garden of Eden. We are the beacon of hope
+    which has the power to restore Earth to its once pristine state.</p>
   </div>
 </body>
 </html>
