--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
   </div>
   <div class="nav">
     <a href="javascript:void(0);" id = "JoinUs"> Join Us</a>
-    <a href="javascript:void(0);" id = "Donate"> Donate</a>
+    <a href="javascript:void(0);" id = "Donate" onclick="donation()"> Donate</a>
   </div>
   <div class = "container">
     <img class = "mainpic-home" src="pictures/awaaz cover.png" alt="Pakistan">
