--- a/qudrat.html
+++ b/qudrat.html
@@ -26,7 +26,7 @@
   </div>
   <div class="nav">
     <a href="javascript:void(0);" id = "JoinUs"> Join Us</a>
-    <a href="javascript:void(0);" id = "Donate"> Donate</a>
+    <a href="javascript:void(0);" id = "Donate" onclick="donation()"> Donate</a>
   </div>
   <div class="proj-details">
     <div class="heading2"> Project Qudrat</div>
