--- a/qudrat.html
+++ b/qudrat.html
@@ -31,9 +31,9 @@
   <div class="proj-details">
     <div class="heading2"> Project Qudrat</div>
     <img src="pictures/qudrat1.png" alt="project logo" width="100%">
-    <p> Every time I look outside all I see is an inevitable destruction slowing coming our way. Earth is no longer a garden
-    of Eden.in fact, it is fast racing towards deterioration and death. With atmospheric CO<sub>2</sub> levels at a dangerous
-    high,flooding sea waters, and massive carbon footprints corroding our land, it is essential that major and immediate actions
+    <p> Every time I look outside all I see is an inevitable destruction slowly coming our way. Earth is no longer a garden
+    of Eden. In fact, it is fast racing towards deterioration and death. With atmospheric CO<sub>2</sub> levels at a dangerous
+    high, flooding sea waters, and massive carbon footprints corroding our land, it is essential that major and immediate actions
     come into existence.</p>
     <p> While profit-oriented corporations are the ones to actually be heald accountable, it is individuals that hand them the
     profit, and thereofore, the power to continue preying on the planet. Every change starts with an individual. Speak up for
