--- a/hamdard.html
+++ b/hamdard.html
@@ -6,6 +6,7 @@
   <meta name = "viewport" content = "width=device-width, initial-scale = 1.0, shrink-to-fit=no">
   <link rel = "stylesheet" href = "static/home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://kit.fontawesome.com/b6c5658995.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <script src = "scripts/home.js"></script>
 </head>
@@ -45,4 +46,21 @@
     contact number will be readily provided.</p>
   </div>
 </body>
+<footer>
+  <div class = "footer-header">
+    <img class = "logo1" alt="logo" src="pictures/logo.jpeg" width = "55px" height="55px">
+    <h4>  Awaaz-e-Pakistan</h4>
+  </div>
+  <div class="content">
+    <div class="link"> Links</div>
+    <a href="home.html">Home</a><span><b> | </b></span><a href="ehsaas.html">Project Ehsaas</a><span><b> | </b> </span>
+    <a href="hamdard.html">Project Hamdard</a><span><b> | </b></span><a href="qudrat.html">Project Qudrat</a><span><b> | </b></span>
+    <a href="javascript:void(0);">Join Us</a><span><b> | </b></span><a href="javascript:void(0);" onclick="donation()">Donate</a>
+  </div>
+  <div class="contact">
+    <span><a href="https://www.instagram.com/awaaze.pakistan/"><i class="fab fa-instagram"></i></a></span><span><a href="javascript:void(0);"><i class="fab fa-facebook-f"></i></a></span>
+    <span><a href="mailto:awaazepakistan1947@gmail.com"><i class="far fa-envelope"></i></a></span>
+    <div class="mail"> For any queries, email us at:<a href="mailto:awaazepakistan1947@gmail.com ">awaazepakistan1947@gmail.com</a></div>
+    <div class="end">©2020 Awaaz-e-Pakistan. All rights reserved.</div>
+</footer>
 </html>
