--- a/home.html
+++ b/home.html
@@ -125,6 +125,13 @@
           </div>
         </div>
         <div class="direc-card">
+          <img src="pictures/Humna.png" alt="Assistant Director Publications" class="card-img">
+          <div class="card-container">
+            <h4><b>Assistant Director Publications</b></h4>
+            <p>Humna Muraad</p>
+          </div>
+        </div>
+        <div class="direc-card">
           <img src="pictures/Maaheen.jpeg" alt="Director Promotions" class="card-img">
           <div class="card-container">
             <h4><b>Director Promotions</b></h4>
@@ -195,6 +202,13 @@
           <div class="card-container">
             <h4><b>Project Qudrat Head</b></h4>
             <p>Alina Imran</p>
+          </div>
+        </div>
+        <div class="head-card">
+          <img src="pictures/Hadeek.png" alt="Project Hamdard Head" class="card-img">
+          <div class="card-container">
+            <h4><b>Project Hamdard Head</b></h4>
+            <p>Hadeek Ghafoor</p>
           </div>
         </div>
       </div>
