--- a/ehsaas.html
+++ b/ehsaas.html
@@ -20,7 +20,6 @@
     <a href="ehsaas.html">Project:Ehsaas</a>
     <a href="hamdard.html">Project:Hamdard</a>
     <a href="qudrat.html">Project:Qudrat</a>
-    <a href="#Team">Team</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
     </a>
@@ -33,7 +32,7 @@
     <div class="heading2"> Project Ehsaas</div>
     <img src="pictures/Ehsaas1.png" alt="project logo" width="100%">
     <p> Crime runs rampant everywhere around us, and  more often than not the legal system fails its people. Justice is for those
-      gender and class favors; the rest msut find their salvation in silence. In times like these, the call out culture on social
+      gender and class favors; the rest must find their salvation in silence. In times like these, the call out culture on social
       media becomes all the more imperative, as it is a place relatively free of discrimination.</p>
     <p>Project Ehsaas is geared towards empathy. It works to provide a safe space for victims of harassment, be it sexual or cyber,
       to have a safe space for their experiences. At times where lockdowns are resulting in a sharp spike in cases of domestic
