--- a/home.html
+++ b/home.html
@@ -44,8 +44,9 @@
   </div>
   <div class="Section1">
     <div class="heading1"> Aims</div>
-    <div class="detail"> Awaaz-e-Pakistan aims to improve the society that live in and to make Pakistan into a better version of
-      itself. In order to accomplish this aim we will be launching three projects which will focus on:
+    <div class="detail"> Awaaz-e-Pakistan aims to improve the society that we live in and to make Pakistan into a better version of
+      itself so that it may become a safe haven for everyone regardless of gender, race and religioon. In order to accomplish this
+      mission we will be launching three projects which will focus on:
       <ol>
         <li><a href="ehsaas.html"> Project Ehsaas</a>: Stopping the atrocities which occur in our society on a daily basis.</li>
         <li><a href="hamdard.html"> Project Hamdard</a>: Helping the poor and needy in any way we can.</li>
