--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
     <a href="javascript:void(0);" id = "Donate" onclick="donation()"> Donate</a>
   </div>
   <div class = "container">
-    <img class = "mainpic-home" src="pictures/awaaz cover.png" alt="Pakistan">
+    <img class = "mainpic-home" src="pictures/awaaz cover.jpg" alt="Pakistan">
     <div class = "bottom-left">For A Greater Good</div>
   </div>
   <div class="Section">
