--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
       only as a community, but as a family will change the way our generation thinks and behaves.</div>
     </div>
   </div>
-  <div class="Section1">
+  <div>
     <div class="heading1"> Aims</div>
     <div class="detail"> Awaaz-e-Pakistan aims to improve the society that we live in and to make Pakistan into a better version of
       itself so that it may become a safe haven for everyone regardless of gender, race and religioon. In order to accomplish this
@@ -54,7 +54,7 @@
       </ol>
     </div>
   </div>
-  <div class="Section2">
+  <div>
     <div class="heading1"> Projects</div>
     <div class = "container-projects">
         <a href = "ehsaas.html"><img class="project-img" alt = "Proj:Ehsaas" src="pictures/Ehsaas.png"></a>
@@ -62,7 +62,7 @@
         <a href = "qudrat.html"><img class="project-img" alt = "Proj:Qudrat" src="pictures/qudrat.png"></a>
     </div>
   </div>
-  <div class="Section3">
+  <div>
     <div class="heading1"> Team </div>
       <button type="button" class="executive" onclick="Exec_team()" id = "Team"> Executive </button>
       <div class="exec-team">
